Use `INTER` fontface in tooltips
Signed-off-by: Shounak Dey <shounakdey@ymail.com>

--- a/frontend/src/styles/core.css
+++ b/frontend/src/styles/core.css
@@ -100,3 +100,8 @@ a.dropdown-toggle {
   max-width: 100%;
   margin: 0.75rem auto;
 }
+
+.tooltip,
+.tooltip .tooltip-inner {
+  font-family: "Inter", sans-serif;
+}
